# JWeb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  simple.py
JWeb/: __init__.py  exceptions.py  jweb.py  response.py
src/: index.jweb
