[project]
name = "JWeb"
version = "0.0"
description = "A simple microframework for building trivial web applications."
readme = "README.md"
license = {file = "LICENSE.txt"}
maintainers = [{name = "Yevhenii", email = "jeniadeshchenko@gmail.com"}]

requires-python = ">=3.8"
dependencies = []

[project.urls]
Source = "https://github.com/JeniaD/JWeb/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
